Added encoding for plus character